# starmap

./: .env.example  .gitignore  BUG_REPORT.md  BUSINESS_FLOW_TEST_REPORT.md  CHANGELOG.md  DEPLOY_GUIDE.md  EXECUTION_PLAN.md  FEATURE_CHECKLIST.md  GAP_ANALYSIS.md  GSD_DEVELOPMENT_PLAN.md  PROJECT_PROGRESS_REPORT.md  README.md  REFACTOR_DESIGN_PROMPT.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  git_init.bat  git_init_final.bat  git_init_no_ampersand.ps1  git_ops.ps1
backend/: alembic.ini  mypy.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  002_add_extraction_tables.py  005_add_pipeline_tables.py  006_add_learning_tables.py  20260616_01_initial_baseline.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/v1/: AGENTS.md  admin.py  dashboard.py  datasource.py  evolution.py  extract.py  graph.py  judge.py  (+8 more)
backend/app/core/: AGENTS.md
backend/app/models/: AGENTS.md  __init__.py  evolution_models.py  extraction_models.py  learning_models.py  pipeline_models.py
backend/app/pipeline/: __init__.py  contracts.py  engine.py  steps.py
backend/app/repositories/: __init__.py  position_repository.py
backend/app/services/: AGENTS.md  graph_service.py  judge_service.py  match_service.py  neo4j_service.py  recommendation_service.py  resources.py  resume_service.py
backend/app/tasks/: AGENTS.md  celery_app.py  stage3_services.py
backend/openapi/: starmap-new-endpoints.yaml
backend/scripts/: expand_graph.py  health_check_all.py  seed_changelog.py  seed_chroma.py  seed_cross_domain_demo.py  seed_datasources_demo.py  seed_expansion_data_demo.py  seed_pipeline_runs_demo.py
backend/tests/: AGENTS.md
backend/tests/fixtures/: extraction_result_sample.json  test_resume_backend.txt
backend/tests/integration/: test_extraction_api.py
backend/tests/unit/: AGENTS.md  test_celery_stage3_tasks.py  test_dependencies.py  test_evolution_api.py  test_evolution_diff_engine.py  test_evolution_integration_pipeline.py  test_evolution_orchestrator.py  test_evolution_trust_hallucination.py  test_extraction.py  test_graph_ingest.py  test_graph_service.py  test_graph_writer_stage3.py  test_judge_service.py  test_match_golden.py  test_models.py  test_normalize.py  test_persist_extraction.py  test_pipeline.py  test_quality_evaluate.py  test_recommendation.py  test_stage2_skeleton.py  test_stage3_analyze.py  test_stage3_api.py  test_stage3_helpers.py  test_stage4_api.py
(+263 files in other folders)
