[project]
name = "starmap-backend"
version = "0.1.0"
description = "星图(StarMap) 人才能力星云导航系统 - 后端"
authors = [{name = "StarMap Team"}]
readme = "README.md"
requires-python = ">=3.11,<3.13"

# ---------- 核心依赖（精确锁定版本，规范3） ----------
dependencies = [
    # Web 框架
    "fastapi (>=0.110,<0.120)",
    "uvicorn[standard] (>=0.27,<0.30)",
    "pydantic (>=2.6,<3.0)",
    "pydantic-settings (>=2.2,<3.0)",
    "python-multipart (>=0.0.9)",        # 文件上传（简历）
    # 数据库
    "sqlalchemy[asyncio] (>=2.0,<2.1)",
    "asyncpg (>=0.29,<0.30)",            # PostgreSQL 异步驱动
    "alembic (>=1.13,<1.14)",            # 迁移（规范2：模型变更必走迁移）
    "neo4j (>=5.17,<6.0)",               # Neo4j Python driver
    "chromadb (>=0.5,<0.6)",             # 向量库
    "redis (>=5.0,<6.0)",
    # 任务队列
    "celery[redis] (>=5.3,<5.4)",
    # LLM / NLP
    "httpx (>=0.27,<0.28)",              # 异步调用星火 API
    "openai (>=1.30,<2.0)",              # 兼容 OpenAI 接口形式调用本地 Qwen
    "spacy (>=3.7,<3.8)",
    "jieba (>=0.42)",
    # 文档解析
    "pdfplumber (>=0.10)",               # PDF 简历解析
    "python-docx (>=1.1)",               # Word 简历解析
    # 工具
    "pyyaml (>=6.0)",                    # YAML 解析（skill_taxonomy.yaml 归一化）
    "python-dotenv (>=1.0)",
    "loguru (>=0.7)",
    "tenacity (>=8.2,<9.0)",             # 重试
    # 评估（流D共用此环境）
    "scikit-learn (>=1.4,<1.5)",         # F1/precision/recall、HDBSCAN 依赖
    "hdbscan (>=0.8.33)",                # 涌现技能聚类
]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-cov = ">=4.1"
pytest-asyncio = ">=0.23"
httpx = ">=0.27"          # 测试 FastAPI
ruff = ">=0.3"            # lint + format
mypy = ">=1.9"           # type check

# 应用项目（不发布到 PyPI），关闭打包模式
[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

# ---------- Ruff 配置（CI lint 门禁） ----------
[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]   # 行长由 formatter 管

# ---------- pytest 配置（覆盖率门禁 60%，规范 §10.3） ----------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-report=xml --cov-fail-under=60"

[tool.coverage.run]
source = ["app"]
omit = ["app/tests/*"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
